Fixes font size on mobile.S

--- a/src/styles/config/_vars.scss
+++ b/src/styles/config/_vars.scss
@@ -49,6 +49,7 @@
     --text-size-xl: 2.0em;
     --text-size-xxl: 2.75em;
     --text-size-xxxl: 3.6em;
+    --text-size-xxxl-mobile: 3em;
 
     --line-height-small: 1.2;
     --line-height-heading: 1.2;
